im sorry... this is awful

--- a/app/config.json.example
+++ b/app/config.json.example
@@ -1,6 +1,6 @@
 {
     "SqlData":{
-        "usr":"name",
+        "usr":"taylor",
         "pwd":"password"
         "dbName":"databasename"
     }
